{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 441,
  "lineage": "b9b3a918-284d-0ea9-cf23-5ec338c54005",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kaka-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:586031085288:instance/i-03114e7de523e8668",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03114e7de523e8668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05cf55f55f187f039",
            "private_dns": "ip-10-0-1-8.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-18-169-166-229.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.166.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ff6688951255f4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c9b846e4a0a928de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6edfa94c214809b",
            "tags": {
              "Name": "kaka-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "kaka-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9b846e4a0a928de"
            ]
          },
          "dependencies": [
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kaka-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:586031085288:instance/i-014e053522505908a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014e053522505908a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f4df3dd83fe1f3c",
            "private_dns": "ip-10-0-2-252.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.252",
            "public_dns": "ec2-18-169-17-183.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.17.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea99223169bcb208",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c9b846e4a0a928de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09018e4f668d5c8aa",
            "tags": {
              "Name": "kaka-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "kaka-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9b846e4a0a928de"
            ]
          },
          "dependencies": [
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kaka-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:586031085288:instance/i-0219de359d3431216",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0219de359d3431216",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047f4fd68b2340dd6",
            "private_dns": "ip-10-0-1-158.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-18-170-37-49.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.37.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bffc3ae2a4268201",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c9b846e4a0a928de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6edfa94c214809b",
            "tags": {
              "Name": "kaka-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "kaka-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9b846e4a0a928de"
            ]
          },
          "dependencies": [
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kaka-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:586031085288:instance/i-094a9fd62c23c0fef",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094a9fd62c23c0fef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09456d797a691784b",
            "private_dns": "ip-172-31-37-255.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.255",
            "public_dns": "ec2-18-168-221-249.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.221.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cfa00c2face85bb0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a3caadc067340a9",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d38562d2ba37e06a"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kaka-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:internet-gateway/igw-09040171ca7ecdd50",
            "id": "igw-09040171ca7ecdd50",
            "owner_id": "586031085288",
            "tags": {
              "Name": "kaka-internet-gateway"
            },
            "tags_all": {
              "Name": "kaka-internet-gateway"
            },
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "dependencies": [
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kaka-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:loadbalancer/app/kaka-load-balancer/93199981ba94b550",
            "arn_suffix": "app/kaka-load-balancer/93199981ba94b550",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kaka-load-balancer-1527127383.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:loadbalancer/app/kaka-load-balancer/93199981ba94b550",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kaka-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b67fd0bfb5c7749c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09018e4f668d5c8aa"
              },
              {
                "subnet_id": "subnet-0d6edfa94c214809b"
              }
            ],
            "subnets": [
              "subnet-09018e4f668d5c8aa",
              "subnet-0d6edfa94c214809b"
            ],
            "vpc_id": "vpc-06b7fc5ea6ad65dec",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.kaka-1",
            "aws_instance.kaka-2",
            "aws_instance.kaka-3",
            "aws_security_group.kaka-load_balancer_sg",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1",
            "aws_subnet.kaka-public-subnet2",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kaka-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:listener/app/kaka-load-balancer/93199981ba94b550/7cc9ecfa0af267fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:listener/app/kaka-load-balancer/93199981ba94b550/7cc9ecfa0af267fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:loadbalancer/app/kaka-load-balancer/93199981ba94b550",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.kaka-1",
            "aws_instance.kaka-2",
            "aws_instance.kaka-3",
            "aws_lb.kaka-load-balancer",
            "aws_lb_target_group.kaka-target-group",
            "aws_security_group.kaka-load_balancer_sg",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1",
            "aws_subnet.kaka-public-subnet2",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "kaka-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:listener-rule/app/kaka-load-balancer/93199981ba94b550/7cc9ecfa0af267fc/f4b34319cd25817e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:listener-rule/app/kaka-load-balancer/93199981ba94b550/7cc9ecfa0af267fc/f4b34319cd25817e",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:listener/app/kaka-load-balancer/93199981ba94b550/7cc9ecfa0af267fc",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.kaka-1",
            "aws_instance.kaka-2",
            "aws_instance.kaka-3",
            "aws_lb.kaka-load-balancer",
            "aws_lb_listener.kaka-listener",
            "aws_lb_target_group.kaka-target-group",
            "aws_security_group.kaka-load_balancer_sg",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1",
            "aws_subnet.kaka-public-subnet2",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kaka-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
            "arn_suffix": "targetgroup/kaka-target-group/3d9facfc464952cd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kaka-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "dependencies": [
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kaka-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd-20230206074744051000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
            "target_id": "i-03114e7de523e8668"
          },
          "dependencies": [
            "aws_instance.kaka-1",
            "aws_lb_target_group.kaka-target-group",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kaka-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd-20230206074725445200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
            "target_id": "i-014e053522505908a"
          },
          "dependencies": [
            "aws_instance.kaka-2",
            "aws_lb_target_group.kaka-target-group",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kaka-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd-20230206074927268200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:586031085288:targetgroup/kaka-target-group/3d9facfc464952cd",
            "target_id": "i-0219de359d3431216"
          },
          "dependencies": [
            "aws_instance.kaka-3",
            "aws_lb_target_group.kaka-target-group",
            "aws_security_group.kaka-security-grp-rule",
            "aws_subnet.kaka-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "kaka-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:network-acl/acl-07da58108b7238608",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07da58108b7238608",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "586031085288",
            "subnet_ids": [
              "subnet-09018e4f668d5c8aa",
              "subnet-0d6edfa94c214809b"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.kaka-public-subnet1",
            "aws_subnet.kaka-public-subnet2",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kaka-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:route-table/rtb-0545192d7d27dd22f",
            "id": "rtb-0545192d7d27dd22f",
            "owner_id": "586031085288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09040171ca7ecdd50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kaka-route-table-public"
            },
            "tags_all": {
              "Name": "kaka-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kaka-internet-gateway",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kaka-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c45e3942b0542259",
            "route_table_id": "rtb-0545192d7d27dd22f",
            "subnet_id": "subnet-0d6edfa94c214809b"
          },
          "dependencies": [
            "aws_internet_gateway.kaka-internet-gateway",
            "aws_route_table.kaka-route-table-public",
            "aws_subnet.kaka-public-subnet1",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kaka-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d257a333cc5b63e",
            "route_table_id": "rtb-0545192d7d27dd22f",
            "subnet_id": "subnet-09018e4f668d5c8aa"
          },
          "dependencies": [
            "aws_internet_gateway.kaka-internet-gateway",
            "aws_route_table.kaka-route-table-public",
            "aws_subnet.kaka-public-subnet2",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kaka-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:security-group/sg-0b67fd0bfb5c7749c",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b67fd0bfb5c7749c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kaka-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "586031085288",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kaka-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:security-group/sg-0c9b846e4a0a928de",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9b846e4a0a928de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b67fd0bfb5c7749c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b67fd0bfb5c7749c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "586031085288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kaka-security-grp-rule"
            },
            "tags_all": {
              "Name": "kaka-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kaka-load_balancer_sg",
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaka-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:subnet/subnet-0d6edfa94c214809b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6edfa94c214809b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586031085288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kaka-public-subnet1"
            },
            "tags_all": {
              "Name": "kaka-public-subnet1"
            },
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "dependencies": [
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaka-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:subnet/subnet-09018e4f668d5c8aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09018e4f668d5c8aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586031085288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kaka-public-subnet2"
            },
            "tags_all": {
              "Name": "kaka-public-subnet2"
            },
            "vpc_id": "vpc-06b7fc5ea6ad65dec"
          },
          "dependencies": [
            "aws_vpc.kaka-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kaka-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:586031085288:vpc/vpc-06b7fc5ea6ad65dec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0407e49a571163133",
            "default_route_table_id": "rtb-0b393706ad8b82255",
            "default_security_group_id": "sg-0a66598dbc6f3458b",
            "dhcp_options_id": "dopt-06bd7b74095872317",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b7fc5ea6ad65dec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b393706ad8b82255",
            "owner_id": "586031085288",
            "tags": {
              "Name": "kaka-vpc"
            },
            "tags_all": {
              "Name": "kaka-vpc"
            }
          }
        }
      ]
    }
  ]
}